Gnome: Fix invisible text in sidebar on backdrop state

--- a/gtk-3.0/widgets/_sidebar.scss
+++ b/gtk-3.0/widgets/_sidebar.scss
@@ -174,7 +174,7 @@ placessidebar{
 						}
           }
           &:backdrop{
-            color: $backdrop_selected_fg_color;
+            color: $backdrop_fg_color;
             .sidebar-icon {
               -gtk-icon-shadow: none;  
             }
